infra/k8s/sai-arts-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sai-arts-api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sai-arts-api
  template:
    metadata:
      labels:
        app: sai-arts-api
    spec:
      containers:
        - name: sai-arts-api
          image: okidijimmyjones/saiarts
          ports:
            - containerPort: 8000
        
      restartPolicy: Always
            
          
# services
---
apiVersion: v1
kind: Service
metadata: 
  name: sai-arts-api-srv
spec:
  selector:
    app: sai-arts-api
  ports:
    - name: sai-arts-api
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
