infra/k8s/ingress-client-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-client-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: saiarts.dev
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: sai-arts-client-srv
              servicePort: 80
