infra/k8s/ingress.srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: saiarts.dev
      http:
        paths:
          - path: /api/?(.*)
          # route it to auth-srv
            backend:
              serviceName: sai-arts-api-srv
              servicePort: 8000

          - path: /?(.*)
            backend:
              serviceName: sai-arts-client-srv
              servicePort: 80
